--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "open-ios": "cd ios && open . && cd .."
   },
   "dependencies": {
-    "react": "16.11.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-is": "^16.13.1",
     "react-native": "0.62.2",
     "react-native-navigation": "^6.7.5",
-    "react-native-vector-icons": "^6.6.0"
+    "react-native-vector-icons": "^6.6.0",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
