--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,6 +1,14 @@
 buildscript {
     ext {
-        minSdkVersion = 19 // Or higher
+        firebaseIidVersion = "19.0.1" // default: "19.0.1"
+        googlePlayServicesIidVersion = "17.0.0" // default: "17.0.0" - AndroidX
+        googlePlayServicesIidVersion = "16.0.1"
+
+        supportLibVersion = '1.0.2' // Use '28.0.0' or don't specify for old libraries, '1.0.2' or similar for AndroidX
+        mediaCompatVersion = '1.0.1' // Do not specify if using old libraries, specify '1.0.1' or similar for androidx.media:media dependency
+        supportV4Version = '1.0.0' // Do not specify if using old libraries, specify '1.0.0' or similar for androidx.legacy:legacy-support-v4 dependency
+
+        minSdkVersion = 28 // Or higher
         buildToolsVersion = "28.0.3"
         compileSdkVersion = 28
         targetSdkVersion = 28
