--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.62.2",
     "react-native-device-info": "^5.6.1",
     "react-native-navigation": "^6.7.5",
+    "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^6.6.0",
     "styled-components": "^5.1.1"
   },
