--- a/ios/Podfile
+++ b/ios/Podfile
@@ -79,6 +79,8 @@ target 'nu_farm_lot' do
 
   pod 'RNDeviceInfo', :path => '../node_modules/react-native-device-info'
 
+  pod 'RNSVG', :path => '../node_modules/react-native-svg'
+
   target 'nu_farm_lotTests' do
     inherit! :complete
     # Pods for testing
