--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react-native-circular-progress": "^1.3.6",
     "react-native-device-info": "^5.6.1",
     "react-native-navigation": "^6.7.5",
+    "react-native-progress": "^4.1.2",
     "react-native-svg": "^12.1.0",
     "react-native-swiper": "^1.6.0",
+    "react-native-toggle-element": "^1.0.0",
     "react-native-vector-icons": "^6.6.0",
     "styled-components": "^5.1.1"
   },
