--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-device-info": "^5.6.1",
     "react-native-navigation": "^6.7.5",
     "react-native-progress": "^4.1.2",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "^12.1.0",
     "react-native-swiper": "^1.6.0",
     "react-native-toggle-element": "^1.0.0",
