--- a/android/build.gradle
+++ b/android/build.gradle
@@ -12,6 +12,7 @@ buildscript {
         buildToolsVersion = "28.0.3"
         compileSdkVersion = 28
         targetSdkVersion = 28
+        googlePlayServicesVersion      = "17.0.0"
         RNNKotlinVersion = "1.3.61" // Or any version above 1.3.x
         RNNKotlinStdlib = "kotlin-stdlib-jdk8"
     }
