--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-animatable": "^1.3.3",
     "react-native-circular-progress": "^1.3.6",
     "react-native-device-info": "^5.6.1",
+    "react-native-geolocation-service": "^5.0.0",
     "react-native-navigation": "^6.7.5",
     "react-native-progress": "^4.1.2",
     "react-native-splash-screen": "^3.2.0",
