--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@react-native-firebase/app": "^8.4.3",
     "@react-native-firebase/firestore": "^7.8.2",
+    "@react-native-firebase/storage": "^7.4.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-is": "^16.13.1",
@@ -22,6 +23,7 @@
     "react-native-device-info": "^5.6.1",
     "react-native-geolocation-service": "^5.0.0",
     "react-native-image-picker": "^2.3.4",
+    "react-native-image-resizer": "^1.3.0",
     "react-native-navigation": "^6.7.5",
     "react-native-progress": "^4.1.2",
     "react-native-splash-screen": "^3.2.0",
