Add flex on guide screen, change setTimeOut second, build release apk

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,8 @@
 # Project-wide Gradle settings.
+MYAPP_RELEASE_STORE_FILE=release.keystore
+MYAPP_RELEASE_KEY_ALIAS=release
+MYAPP_RELEASE_STORE_PASSWORD=Meas@1234
+MYAPP_RELEASE_KEY_PASSWORD=Meas@1234
 
 # IDE (e.g. Android Studio) users:
 # Gradle settings configured through the IDE *will override*
