--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^16.13.1",
     "react-is": "^16.13.1",
     "react-native": "0.62.2",
+    "react-native-android-open-settings": "^1.3.0",
     "react-native-animatable": "^1.3.3",
     "react-native-circular-progress": "^1.3.6",
     "react-native-device-info": "^5.6.1",
@@ -26,6 +27,7 @@
     "react-native-image-picker": "^2.3.4",
     "react-native-image-resizer": "^1.3.0",
     "react-native-navigation": "^6.7.5",
+    "react-native-permissions": "^2.2.2",
     "react-native-progress": "^4.1.2",
     "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "^12.1.0",
